multi-tenant-moderncloud/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${TENANT_NAME}
  labels:
    tenant: ${TENANT_NAME}
    name: ${TENANT_NAME}
